NUTCH-2429 Fix Plugin System to allow protocol plugins to bundle their URLStreamHandlers